cargo-aprz-lib/src/commands/snapshots/cargo_aprz_lib__commands__validate__tests__invalid_expression_syntax.snap
---
source: cargo-aprz-lib/src/commands/validate.rs
assertion_line: 252
expression: snapshot_content
---
TOML parse error at line 2, column 1
  |
2 | [[high_risk_if_any]]
  | ^^^^^^^^^^^^^^^^^^^^
Could not parse expression 'invalid_syntax': ERROR: <input>:1:6: Syntax error: mismatched input 'is' expecting {<EOF>, '==', '!=', 'in', '<', '<=', '>=', '>', '&&', '||', '[', '.', '-', '?', '+', '*', '/', '%'}
| this is not a valid CEL expression !!!
| .....^
